# ChangeLog for dev-python/docutils
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/ChangeLog,v 1.199 2014/04/01 04:47:48 floppym Exp $

*docutils-0.11 (01 Apr 2014)

  01 Apr 2014; Mike Gilbert <floppym@gentoo.org> +docutils-0.11.ebuild,
  +files/docutils-0.11-python3.3-odt-writer.patch:
  Version bump, add python3.4.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> docutils-0.10.ebuild:
  Add support for the new PyPy slotting.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> docutils-0.10.ebuild,
  docutils-0.9.1-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  02 Jun 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
  Stable for sh, wrt bug #469660

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
  Stable for sparc, wrt bug #469660

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
  Stable for s390, wrt bug #469660

  18 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
  Stable for alpha, wrt bug #469660

  18 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
  Stable for ia64, wrt bug #469660

  17 May 2013; Jeroen Roovers <jer@gentoo.org> docutils-0.10.ebuild:
  Stable for HPPA (bug #469660).

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
  Stable for ppc64, wrt bug #469660

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
  Stable for ppc, wrt bug #469660

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
  Stable for arm, wrt bug #469660

  05 Mar 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.9.1-r1.ebuild:
  Stable for sh, wrt bug #455724

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.9.1-r1.ebuild:
  Stable for arm, wrt bug #455724

  28 Feb 2013; Jeroen Roovers <jer@gentoo.org> docutils-0.9.1-r1.ebuild:
  Stable for HPPA (bug #455724).
