@@ -9,22 +9,24 @@ AUX docutils-0.7-python-3.2-configparser.patch 1708 SHA256 06938cdb53da6a41c5d07
 AUX docutils-0.7-python-3.2-xml.etree.ElementTree.patch 447 SHA256 0aeceb109ea15aedf3b805e186d1a5253e1a6a36ed8973aea0c9c7ed353c054e SHA512 50e80a9e821dfd3e682a4b2040d45ad65150f0d09cfdb6ce317156ee1db2e743dbf726757130bfafefbbcf8dead9b7e66b4819752319f1f394ec27367cab56fc WHIRLPOOL ed8d623d044110c2ea4cc8a79ae0c7b74ad92f364afb033da268fa5b3c52bbcda3fa1faed92bf3ad854e14b73dca2a47192391d5c74096e2f06acddd6edcb61d
 DIST docutils-0.10.tar.gz 1602552 SHA256 370624e61b6773da2f2fb17cc2a4eaea4bb596c3585d13f75ff193c1c738603e SHA512 255474d4d9efc427ecb2123939af64475335c1f2af2f1b398a0c540693629f6ce6b105fb45f6ef962800948e2844b5140ecc6b81218e3c8619d14c9c7f2705c4 WHIRLPOOL 7e25c5b9206f019acc9131a0b5baf05fd21d042d121e2c472a8d908cc668346e26572d6db6546200dc9b85fb9b8a462e3ada59eb9c760f9915efaa510ffe74fa
 DIST docutils-0.11.tar.gz 1611755 SHA256 9af4166adf364447289c5c697bb83c52f1d6f57e77849abcccd6a4a18a5e7ec9 SHA512 8e87581b27ce4fb5e97dcef56047f4bf3a076b98e9e42f5dc66f4c370e5893d1571e46f00fee6f1c8b9f8c8a79e128e4599b9ee213ad1dee2bf16a0246e187df WHIRLPOOL 0231e34e8c84a29f52f244dfe8d3fdbb8f2db9f6e5f26d0a5953c109a2620b15f86874e3b7604aeccf805f789abef7e7af5cc076dde25f2e2947bad11d2ae58c
+DIST docutils-0.12.tar.gz 1618353 SHA256 c7db717810ab6965f66c8cf0398a98c9d8df982da39b4cd7f162911eb89596fa SHA512 0087433f8b76e1d0302d2fab77fdbda941132d16ac1fcecb26ca66119687eefd9e2f6901e05d705f857fa31e2526136c9827dfd57c44cd295bd10dcce3faebf9 WHIRLPOOL 9b9d9d7315351e4b803195a157836df13a10fc706c0aea2c6ac7c6d01bd034870106d0ceedfbd7e9fae17420f3d116df30cc222ad5b3c7205d5eca767d550564
 DIST docutils-0.8.1.tar.gz 1499832 SHA256 5a3b776518257a59fefaf48ef1e0635bc1179f8cafb02a9cc84c9644bb25df71 SHA512 61d09a3a07ca8c53aa830415066bd3d78ba6f9493f5ceb8351ba04967157494079a84ff0bc242145460a83f3980b09961b128aa3421d4614651066f23639635a WHIRLPOOL a16872c190cd854a8ffb111ed1f9dd6d8ad4bdd3732c34173628b37ac9214b27706136f411f43421adf6935c6aa3dcdf178bf41b17ae80d750b0492fa0d6ea1c
 DIST docutils-0.9.1.tar.gz 1541437 SHA256 e89f187dbbc6674f839239c89fec44af9f18809b66a8a55a41b57b9ee2356994 SHA512 ac1158c562533796f26d4bc451cc9cd371f7fad60d190aa43c763d53a15c2b7656962e7ef72248439896a5fd759c53f6aee14b08bca2292542e944fa9bb044e9 WHIRLPOOL 6b197c1e96a218d9a3a2116ea6e68cae22130c77025fe6e6942f698a918b96579a9216daf23e01cb1c54c7d52ddcc4a3e8ec1b8279ae7be7e3044e044e14c039
 DIST docutils-0.9.tar.gz 1534138 SHA256 ff49bf77e9135490a73740d884b418ab8b982ad16ee52cfe796d059c592ea245 SHA512 ce015d79093e8fa0e14851c5f122a2c2d38981c82358bb1a9219271af2d12bf3219abbeed362114342ebd5a7173e0bf4a3686987c70bb950c72c2ffa3fed2440 WHIRLPOOL b33d34a5de0adb7e77a3c053b3cd800152e1bcdac1006aac5b7450465844d176a2a7e9b6e41507343bcfc747aba9316f01df661f84555d5a9bc28a42db202320
 DIST glep-0.4-r1.tbz2 4667 SHA256 d0b421869fb3437e96484687fd57f34d4f5cdd5a1fbdb2314f1474b1f9afa058 SHA512 098d9f5043a60af9dfac63f6472b576e66ffeda924902ca825ed63f573aeb8bad7c9f9a6853fd99e648683488ee6db2ee55c139df3dde06983b72cfb5dd8cdd3 WHIRLPOOL 277cdf4a7fe70990864a4f0fd592561bcf5edc1de8d4830da96c75093d47d8d64214b95ac5ae7960670a8520650a5e23355df248f61bddcd9cd5dc23cab0fe19
 EBUILD docutils-0.10.ebuild 2174 SHA256 91fbc6ba229f83022b390aa53375ff5c535532c041531f716a9864a39c7ed5d3 SHA512 26069ce80aa62a0a32222771efaabc6e3b5308aac8a61f7c5d442de92dafff5c06ebd39382a707632dc44897c16ba049ee81e22f8b23a4b83b6f00f3b1ee5175 WHIRLPOOL e43890a6ef90af7c40dea2522fcf11f82daf148d68e46e70d839cb1113e1743313094ecdc2d55c91a04cf5bf1932812cbd0293f26d9015266741138c4c96a225
 EBUILD docutils-0.11.ebuild 2106 SHA256 36b92dbfb0e3422c699d620b341dfbbb8d96a1e0d8a53580bb53309e3e4fae8f SHA512 75b0583ccf13a348902421b2aa943431f8237c74183b94bb0c9bfee1c0f11a591fef06e1b1e6f1a029b9b82eda72c9863ecb71ef57a407bae5e961178bd90f9e WHIRLPOOL 4f694c4b8f0b0345f1583929fb1a7623c333c1858f136dd953bba9899ab7074d1c60aa02d5d404e02ff71415e16eaa23bd2da5a069365c84ee195862182e91c4
+EBUILD docutils-0.12.ebuild 2026 SHA256 37a4f2f8b901abcf74a492ee6541177ffdf73c2b3d07bfbc8707b4a9ff01597d SHA512 6b32f7ea3d07efd12fd99783047d1cadb57192652febe8cce0325680f83e856f01ae314df4fa5ff36b31b4b1477a429db3d21917feaf0c0a2acb0e083c75f32f WHIRLPOOL 4b2c2447e8d57f1a1081bc75776cb81e0c0bcc3bc83f3cabf36d2b223bb7a853f933eb345f83dad73772dbdf78aaeabc17e2ed813a31d1a48cc4e705e8fc4e0a
 EBUILD docutils-0.8.1.ebuild 4480 SHA256 d5dc8b07a95adb229c02290374ed4c82ac79f0557535bdb47fafd41c2af7fd7f SHA512 96739bae1783582ec62d5546189559c3d88ece05c44fcfb5ec0272f8655f89266501c880ddb55b4b0d5b331a3daab82fda8700bfa8be5abcda4aecd0570a47d5 WHIRLPOOL 0234d2259a4d1cffc251294fd7119515dfa057d8800804336104eb45c433c51bc591789961b54f5ea92fc8bcf87b9a75697cf676ed386170845560f6ad9ba4e2
 EBUILD docutils-0.9.1-r1.ebuild 2756 SHA256 329dfb567c6dbcbecae0caed6738367997b33ac0e9837bade9289cb8e1db5e9a SHA512 684673b589d488abc1bc1c11f58c438fd06826f2240727810ad6df218d85534175a73e96758bef7cd4cc3d88f7eeab4bf018bffdd86ffd81ef26cab788d64aff WHIRLPOOL 7d5fe9eceadb1a23cb4a4bea5ef06aa84930a4635dcb6444948a79581908666b5f549ed9655989a79d5acf167f4efc056360a1ec2b59d1696bc42122799eb79f
 EBUILD docutils-0.9.1.ebuild 3583 SHA256 9cb0b18c1522081307f39ab9c82bc950b9f20400c7eb561d97aa7f8da10c1b1d SHA512 eefcbb8f67338741a66915284a4c1efd19574325461148571e93421ae142ad70cff2d65eca9d7393d2e7aea6fc92a6072a2333ce2a8dcb8bffb317c9234efbaa WHIRLPOOL a0f845472c556d38491122a1936a847e8221a3cbe093afaa15349872fa2b6ecfdf76e5d396e56ef5fdd4c9d38d8fbf6d69487fb7ba6312f2d1809de919589a78
 EBUILD docutils-0.9.ebuild 4104 SHA256 866a488bc9bb1683358e9726d005a0580a77683833dccb2e3e9f7649f8fdd6ce SHA512 ee9cc41c56fcc1e41074ed7642525601debace25186c9a44781737999dc01c58d56f7e0b02f8cb31b49dbf13e749bc16ed4a2bccb561ff3b99667a227523f696 WHIRLPOOL b6bc09b2c75f8b3d621b8fdfc76a276a34b9cfffd7c48e8898ba56ea9919fd89baacfa0f6c3f4efc3bbf88573d3126d45bbf2b914b07910700ee17c9994a2009
-MISC ChangeLog 27394 SHA256 db1bd8707873d7d986043328c5c603d01d4e40e73c51435cd48c66fc1e1d7417 SHA512 8ebefd3eb57cfbcb7c6f7a0a6815215903f08ccec009df075541d11d933cd016215348c02c5d800cde43f52e44676a821e7bb31a94fc44e2cf4e35544eaa50a0 WHIRLPOOL 369111b7cff242fb2c5c048b6da1ef7aeaa631887a1c41a0786a208cfd822e8117e7b8dc576503369d10aad69ede80a0f3f68af3d37b3b9c20fe8be388332993
+MISC ChangeLog 27545 SHA256 4229be2ade8a73f02515393c6f74b651809f884a62a6cc4e0810f10b706ecf05 SHA512 95244895f80e6cd9958796ed0a4b0ad9580c38cdc7ea5970264c41c3d368e903876178a5a0caf94a553bfda2fd2b1a7756805e90310de58c761c51b050050883 WHIRLPOOL f579c5ae7d04de693d2c2c0f4e133a1f9415199f21630d28cbbb26b46e0181699f537540839ae5f965696673aca6aa090ca5bac99d34a8cc48993b38fd3d3921
 MISC metadata.xml 224 SHA256 0bb6bfd1577f4800009497c7813935f712ae6a44dbbdec1a903e79eaa5f21755 SHA512 84a00eb058c5f923404a2ede0df0a2ef9a1b4143a2f7d7b8ddfd5b68c8342dc68e89b5042e603a93b756e8e69cb92a5a32e6aa9ced869d30de1e41c874e080f3 WHIRLPOOL 9392f13e54a9fa3df0396729edecc43709acb478f2d67add1f0b3aeeb16c902fac3d970dcacab9be6ae1094f8700848d790acb260e288440ca80f9be8d0ae0b6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlM6RPYACgkQC77qH+pIQ6Tu/QD/Zshm+vUtWXMGBsc0ntfikCTr
-68NPTCPB1/WIHlktVY8A/RgDSQazUwNsGeTdsuKoi7H/lhMDQWojtjZQtY7OiZ/w
-=/Adw
+iEYEAREIAAYFAlPhqlEACgkQso7CE7gHKw0E+QCg4GMdKNv4wfBK6lS9iQdi1FVf
+VhwAoIPW3OKIYSbfw29J0tr/wSLE7Ifx
+=Z0Jh
 -----END PGP SIGNATURE-----
