@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/docutils
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/ChangeLog,v 1.199 2014/04/01 04:47:48 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/ChangeLog,v 1.200 2014/08/06 04:17:34 idella4 Exp $
+
+*docutils-0.12 (06 Aug 2014)
+
+  06 Aug 2014; Ian Delaney <idella4@gentoo.org> +docutils-0.12.ebuild:
+  bump; drop py2.6 pypy2_0, drop redundant patch
 
 *docutils-0.11 (01 Apr 2014)
 
